Add makefile to start and stop server, rename container name in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   minecraft-server:
-    container_name: minecraft-server
+    container_name: spigot-server
     image: tsaki/spigot-server
     build:
       context: .
