Replace makefile scripts with interactive shell configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "SERVER_OPTIONS=-Xmx1G -Xms1G"
     volumes:
       - "spigot-server:/opt/spigot-server"
+    stdin_open: true
+    tty: true
 
 volumes:
   spigot-server:
