--- a/server.properties
+++ b/server.properties
@@ -28,7 +28,7 @@ server-ip=
 resource-pack-prompt=
 allow-nether=true
 server-port=25565
-enable-rcon=true
+enable-rcon=false
 sync-chunk-writes=true
 op-permission-level=4
 prevent-proxy-connections=false
